move all js files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>40k Tracker</title>
     
     <script type="application/javascript" src="https://unpkg.com/mithril/mithril.js"></script>
-    <script type="application/javascript" src="data.js"></script>
+    <script type="application/javascript" src="src/data.js"></script>
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
